--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,5 @@
 SERVER_PORT=8000
 SERVER_HOSTNAME=phimmoi
 
-MYSQL_HOST=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MONGO_USERNAME=khacvux
+MONGO_PASSWORD=SYNCMASTERb1930
