--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-av": "~11.2.3",
+    "expo-blur": "~11.1.0",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
+    "expo-screen-orientation": "~4.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
@@ -32,7 +37,12 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "twrnc": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
