--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
+    "formik": "^2.2.9",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-super-grid": "^4.4.2",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
